# oore.build

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  TESTING_PLAN.md  install.local.sh  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/oore-cli/: Cargo.toml
crates/oore-cli/src/: config.rs  main.rs
crates/oore-cli/src/commands/: build.rs  config.rs  github.rs  gitlab.rs  init.rs  mod.rs  pipeline.rs  repo.rs  signing.rs  webhook.rs
crates/oore-core/: Cargo.toml
crates/oore-core/migrations/: 001_initial_schema.sql  002_provider_credentials.sql  003_oauth_state_extensions.sql  004_pipeline_configs.sql  005_pipeline_config_format.sql  006_code_signing.sql  007_appstore_connect_api_keys.sql
crates/oore-core/src/: auth.rs  error.rs  flutter.rs  lib.rs
crates/oore-core/src/crypto/: mod.rs
crates/oore-core/src/db/: artifact.rs  credentials.rs  mod.rs  pipeline.rs  repository.rs  signing.rs
crates/oore-core/src/demo/: data.rs  mod.rs  provider.rs
crates/oore-core/src/models/: artifact.rs  build.rs  build_log.rs  build_step.rs  mod.rs  pipeline.rs  provider.rs  repository.rs  signing.rs  webhook.rs
crates/oore-core/src/oauth/: github.rs  gitlab.rs  mod.rs
crates/oore-core/src/pipeline/: executor.rs  mod.rs  parser.rs  resolver.rs
crates/oore-core/src/providers/: github.rs  gitlab.rs  mod.rs
crates/oore-core/src/signing/: android.rs  ios.rs  keychain.rs  mod.rs
crates/oore-core/src/webhook/: mod.rs  parser.rs  verifier.rs
crates/oore-server/: Cargo.toml
crates/oore-server/src/: cli.rs  lib.rs  main.rs  state.rs  test_utils.rs
crates/oore-server/src/commands/: init.rs  mod.rs
crates/oore-server/src/middleware/: admin_auth.rs  mod.rs
crates/oore-server/src/routes/: builds.rs  github_oauth.rs  gitlab_oauth.rs  mod.rs  oauth_callback.rs  pipelines.rs  repositories.rs  setup.rs  signing.rs  webhooks.rs
crates/oore-server/src/service/: linux.rs  macos.rs  mod.rs
crates/oore-server/src/worker/: build_processor.rs  mod.rs  webhook_processor.rs
crates/oore-server/tests/: api_tests.rs
crates/oore-tui/: Cargo.toml
crates/oore-tui/src/: lib.rs  main.rs
crates/oore-tui/src/cli/: args.rs  mod.rs  output.rs
crates/oore-tui/src/cli/commands/: config.rs  mod.rs  repo.rs
crates/oore-tui/src/shared/: client.rs  config.rs  mod.rs
crates/oore-tui/src/shared/api/: mod.rs  repos.rs  types.rs
crates/oore-tui/src/tui/: app.rs  events.rs  mod.rs  terminal.rs
docs/: README.md  api-reference.md  architecture.md  astro.config.mjs  cli-reference.md  configuration.md  github-integration.md  gitlab-integration.md  package.json  service-management.md
docs/src/content/docs/: architecture.mdx  configuration.mdx  index.mdx  introduction.mdx  quickstart.mdx  roadmap.mdx
docs/src/content/docs/guides/: contributing.mdx  demo-mode.mdx  service-management.mdx
docs/src/styles/: custom.css
documentation/: FEATURE_DEVELOPMENT.md  FEATURE_ROADMAP.md  TESTING.md  feature-inventory.md  qa-checklist.md  user-journeys.md
landing/: .gitignore  README.md  astro.config.mjs  package.json
landing/src/components/: Features.astro  Footer.astro  Hero.astro  QuickStart.astro  Status.astro  WhySelfHost.astro
landing/src/components/ui/: Card.astro  Terminal.astro
landing/src/layouts/: Layout.astro
landing/src/pages/: index.astro
progress/: 2026-01-24.md  2026-01-25.md  2026-01-26.md  2026-01-27.md  2026-01-28.md  2026-01-29.md  2026-01-30.md
research/code-signing/: 00-overview.md  01-ios-code-signing.md  02-android-code-signing.md  03-macos-code-signing.md  04-codemagic-cli-analysis.md
site/: .gitignore  astro.config.mjs  package.json  tsconfig.json
site/public/: robots.txt
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
site/src/styles/: global.css  starlight.css
tests/cli/: smoke_test.sh
tests/specs/: journey_01_first_time_setup.feature  journey_02_github_integration.feature  journey_06_build_execution.feature
types/: AndroidKeystoreResponse.ts  AndroidSigningStatus.ts  AppStoreConnectApiKeyResponse.ts  BuildArtifactResponse.ts  BuildLogContentResponse.ts  BuildLogResponse.ts  BuildResponse.ts  BuildStatus.ts  BuildStepResponse.ts  CertificateType.ts  ConfigSource.ts  ConnectResponse.ts  CreatePipelineConfigRequest.ts  CreateRepositoryRequest.ts  DefaultPermissions.ts  GitHubAppManifest.ts  GitHubAppStatus.ts  GitHubSetupStatusResponse.ts  GitLabCredentialsStatus.ts  GitLabProjectInfo.ts  GitLabSetupStatusResponse.ts  GitProvider.ts  HookAttributes.ts  InstallationInfo.ts  InstallationRepositoriesResponse.ts  InstallationRepositoryInfo.ts  InstallationsResponse.ts  IosCertificateResponse.ts  IosProfileResponse.ts  IosSigningStatus.ts  KeystoreType.ts  LogStream.ts  ManifestResponse.ts  PipelineConfigResponse.ts  ProfileType.ts  RepositoryResponse.ts  SetupResponse.ts  SetupStatusResponse.ts  SigningStatusResponse.ts  StepStatus.ts  (+11 more)
web/: package.json  tsconfig.json
web/src/app/: error.tsx  layout.tsx
web/src/app/(auth)/: error.tsx  layout.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/components/: error-boundary.tsx
web/src/components/builds/: ansi-log-viewer.tsx  build-logs-section.tsx  build-status.tsx  build-step-item.tsx  step-status-badge.tsx
web/src/components/dashboard/: quick-actions.tsx  recent-builds.tsx  setup-status.tsx  stats-cards.tsx
web/src/components/layout/: app-sidebar.tsx  header.tsx  theme-toggle.tsx
web/src/components/pipelines/: pipeline-config-card.tsx  pipeline-editor.tsx
web/src/components/shared/: confirm-dialog.tsx  empty-state.tsx  loading-skeleton.tsx
web/src/components/ui/: scroll-area.tsx  sidebar.tsx  table.tsx
web/src/lib/: auth.ts  constants.ts  equality.ts  format.ts  url.ts
web/src/lib/api/: artifacts.ts  builds.ts  client.ts  github.ts  gitlab.ts  pipelines.ts  repositories.ts  setup.ts  signing.ts  types.ts  webhooks.ts
web/src/lib/monaco/: huml.ts
web/src/lib/utils/: ansi.ts
(+29 files in other folders)
