[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/devaryakjha/oore.build"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "limit"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Pattern matching
glob = "0.3"
regex-lite = "0.1"

# Concurrent data structures
dashmap = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
subtle = "2"
aes-gcm = "0.10"
rand = "0.8"
secrecy = { version = "0.10", features = ["serde"] }

# ID generation
ulid = { version = "1", features = ["serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Environment loading
dotenvy = "0.15"

# JWT for GitHub App authentication
jsonwebtoken = "9"
base64 = "0.22"

# Bytes handling
bytes = "1"

# URL and IP handling
url = "2"
ipnet = "2"

# Zeroize sensitive memory
zeroize = { version = "1", features = ["derive"] }

# URL encoding
urlencoding = "2"

# Directory and file system utilities
dirs = "5"
tempfile = "3"

# macOS plist parsing (for iOS code signing)
plist = "1"

# Testing dependencies
axum-test = "18"
temp-env = "0.3"

# TypeScript type generation
ts-rs = { version = "10", features = ["chrono-impl"] }
