[package]
name = "oore-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "oore"
path = "src/main.rs"

[dependencies]
oore-core = { path = "../oore-core" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
chrono.workspace = true
url.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
dotenvy.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
# For automated browser opening and terminal progress
open = "5"
indicatif = "0.17"
console = "0.15"
