[package]
name = "oore-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
ulid.workspace = true
async-trait.workspace = true
hmac.workspace = true
sha2.workspace = true
hkdf.workspace = true
hex.workspace = true
subtle.workspace = true
aes-gcm.workspace = true
rand.workspace = true
secrecy.workspace = true
bytes.workspace = true
reqwest.workspace = true
url.workspace = true
ipnet.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
zeroize.workspace = true
urlencoding.workspace = true
glob.workspace = true
regex-lite.workspace = true
