[package]
name = "oore-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "oored"
path = "src/main.rs"

[dependencies]
oore-core = { path = "../oore-core" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
