[package]
name = "oore-server"
version.workspace = true
edition.workspace = true

[lib]
name = "oore_server"
path = "src/lib.rs"

[[bin]]
name = "oored"
path = "src/main.rs"

[dependencies]
oore-core = { path = "../oore-core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
chrono.workspace = true
ulid.workspace = true
dotenvy.workspace = true
bytes.workspace = true
subtle.workspace = true
secrecy.workspace = true
hex.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true
thiserror.workspace = true
url.workspace = true
ipnet.workspace = true
dashmap.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
test-utils = []

[dev-dependencies]
axum-test.workspace = true
temp-env.workspace = true
tempfile.workspace = true
oore-server = { path = ".", features = ["test-utils"] }
